# graphlayout

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h.in  main.c
src/include/: commandline.h  config.h  document.h  graph.h  layoutmodel.h
src/lib/: CMakeLists.txt  commandline.c  document.c  graph.c
testdata/: test_graph_file1.grp
tests/: CMakeLists.txt  graphlayouttest.c  graphtest.c  testframework.c  testframework.h
